cabal-version: 2.4

name: revolio
version: 1.0.0.0
synopsis: Punch in and out of Paychex via Slack.
description: Revolio enables you to punch in and out of Paychex via Slack.

category: Web
extra-source-files: README.markdown
maintainer: Taylor Fausak
license: ISC
license-file: LICENSE.markdown

common basics
  build-depends:
    aeson ^>= 1.4.2,
    async ^>= 2.2.1,
    base ^>= 4.12.0,
    bytestring ^>= 0.10.8,
    case-insensitive ^>= 1.2.0,
    containers ^>= 0.6.0,
    cryptonite ^>= 0.25,
    http-client ^>= 0.5.14,
    http-client-tls ^>= 0.3.5,
    http-types ^>= 0.12.2,
    memory ^>= 0.14.18,
    network-uri ^>= 2.6.1,
    stm ^>= 2.5.0,
    text ^>= 1.2.3,
    wai ^>= 3.2.1,
    wai-extra ^>= 3.0.24,
    warp ^>= 3.2.25,
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specializations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe

common executable
  import: basics
  build-depends: revolio
  ghc-options: -rtsopts -threaded

library
  import: basics
  autogen-modules: Paths_revolio
  exposed-modules: Revolio
  hs-source-dirs: source/library
  other-modules:
    Paths_revolio
    Revolio.Main
    Revolio.Type
    Revolio.Type.PaychexClientId
    Revolio.Type.SlackSigningSecret
    Revolio.Version

executable revolio
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite test
  import: executable
  build-depends:
    hspec ^>= 2.6.0,
  hs-source-dirs: source/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
